# skip

./: .coveragerc  .gitignore  LICENSE.txt  README.md  pyproject.toml  server.py  skip.py  sources.py  watchers.py
docs/: getting-started.md  index.html  index.md  package-lock.json  package.json  tailwind.config.js  tailwind.css
docs/css/: pygments.css  tailwind.css
docs/templates/: _prose_content.j2  base.j2  docs.j2  index.j2
docs/tutorial/: collections.md  data.json  data.md  getting-started.md  layouts.md  pagination.md  project-structure.md
skip_ssg/: server.py  skip.py  sources.py
tests/: test_skip.py  test_sources.py
tests/files/: my-data.py  pagination.j2  pagination2.j2  tags.html
tests/files/demo_site/: data_top.json
tests/files/demo_site/sub-a/: data_a1.json  data_a1.py
tests/files/demo_site/sub-b/: data_b1.json  data_b1.py
