[tool.poetry]
name = "skip"
version = "0.1.0"
description = "A simple python-based static site generator"
authors = ["Harry"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
watchgod = "^0.7"
Markdown = "^3.3.4"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
