[tool.poetry]
name = "skip"
version = "0.1.0"
description = "A simple python-based static site generator"
authors = ["Harry"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
watchgod = "^0.7"
Markdown = "^3.3.4"
python-frontmatter = "^1.0.0"
Jinja2 = "^3.0.1"
gitignore-parser = "^0.0.8"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"